--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "11.0.1",
+    "node-sass": "^5.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass-loader": "^12.1.0"
   },
   "devDependencies": {
     "eslint": "7.29.0",
